--- a/style.css
+++ b/style.css
@@ -4,6 +4,13 @@ h2 {
   color: #086abf;
   margin-left: 60px;
 }
+h3 {
+  display: flex;
+  justify-content: center;
+  font-size: 40px;
+  color: #086abf;
+  
+}
 #resetScoreboard {
   margin-left: 70px;
   margin-bottom: 50px;
@@ -26,4 +33,6 @@ h2 {
   font-size: 20px;
   margin-left: 15px;
 }
+
+
 
